--- a/styles/DevsPage.module.css
+++ b/styles/DevsPage.module.css
@@ -1,49 +1,39 @@
 /* styles/DevsPage.module.css */
 
 .fullscreenBackground {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1; /* Ensure it is behind all content */
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    @apply fixed top-0 left-0 w-full h-full bg-cover bg-center bg-no-repeat z-[-1];
 }
-  
+
 .pageContainer {
-    max-width: 1200px;
-    margin: 0 auto; /* Center the container */
-    padding: 16px; /* Add consistent padding */
-    background-color: transparent; /* Make the inner layer background transparent */
-    border-radius: 8px; /* Add some rounding to make it look better */
+    @apply max-w-[1200px] mx-auto p-8 relative;
+    z-index: 1; /* Ensure it stays above other elements */
 }
-  
+
 .title {
     color: #5F7179;
-    font-size: 24px; /* Increased font size for better visibility */
+    font-size: 18px; /* Increased font size for better visibility */
     font-weight: 400;
     line-height: normal;
     margin: 16px 0; /* Consistent vertical margin */
 }
-  
+
 .description {
+    font-family: 'Inter', sans-serif;
     font-size: 20px; /* Updated font size */
-    font-weight: 400;
+    font-weight: 400; /* Ensure it is not bold */
     line-height: normal;
-    color: #000;
+    color: #4A5567;
     margin-bottom: 40px; /* Increased bottom margin for more space */
 }
-  
+
 .description strong {
     background: linear-gradient(90deg, #4679E2 0%, #F08852 100%);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    font-weight: 400; /* Ensure it is not bold */
 }
-  
+
 .separatorLine {
     height: 1px;
     background-color: #6B6767;
