--- a/styles/DocumentationCards.module.css
+++ b/styles/DocumentationCards.module.css
@@ -6,8 +6,8 @@
     padding: 0; /* No additional padding */
     max-width: 1200px; /* Constrain the width of the container */
     margin: 0 auto; /* Center the container */
-  }
-  
+}
+
 .card {
     background: rgba(255, 255, 255, 0.6); /* Make the card background semi-transparent */
     border-radius: 16px;
@@ -18,13 +18,13 @@
     justify-content: space-between;
     transition: transform 0.2s ease, box-shadow 0.2s ease;
     position: relative; /* To position the icon */
-  }
-  
+}
+
 .card:hover {
     transform: translateY(-5px);
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-  }
-  
+}
+
 .cardLinkWrapper {
     display: flex;
     flex-direction: column;
@@ -32,73 +32,99 @@
     text-decoration: none;
     color: inherit;
     height: 100%;
-  }
-  
+}
+
 .cardTitle {
-    font-size: 24px;
+    font-size: 20px;
     color: #5F7179;
     margin-bottom: 8px; /* Consistent bottom margin */
     background: linear-gradient(90deg, #4679E2 0%, #F08852 50%);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
-  }
-  
+    font-weight: bold; /* Make the card titles bold */
+}
+
 .cardDescription {
+    font-family: 'Inter', sans-serif;
     font-size: 16px; /* Updated font size */
     color: #5F7179; /* Updated color */
     margin-top: 0; /* Ensure no top margin */
     margin-bottom: 16px; /* Consistent bottom margin */
     flex-grow: 1; /* Ensure it takes up available space */
-  }
-  
+}
+
 .cardButtonContainer {
     display: flex;
     justify-content: center;
-  }
-  
+}
+
 .cardButton {
-    display: inline-block;
-    font-size: 14px;
+    display: inline-flex; /* Changed to inline-flex for alignment */
+    align-items: center; /* Center items vertically */
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
     padding: 8px 16px;
     border-radius: 35px;
     background: linear-gradient(90deg, #4679E2 0%, #A2BCF1 25%, #FFF 50%, #F7C3A8 75%, #F08852 100%);
-    color: #000; /* Default white text */
+    color: #1e4334; /* Default white text */
     text-decoration: none;
     text-align: center;
     transition: opacity 0.2s ease;
     position: absolute;
     bottom: 16px;
     right: 16px;
-  }
-  
+    margin: auto;
+    font-weight: 500;
+}
+
 .cardButton:hover {
     opacity: 0.9;
-  }
-  
+}
+
+.arrowIcon {
+    margin-left: 8px; /* Add some space between the text and the arrow */
+    width: 16px; /* Adjust size as needed */
+    height: 16px; /* Adjust size as needed */
+    transform: rotate(320deg); /* Rotate the arrow 45 degrees */
+}
+
+.arrowIconNonFirst {
+    width: 16px; /* Adjust size as needed */
+    height: 16px; /* Adjust size as needed */
+    transform: rotate(320deg); /* Rotate the arrow 45 degrees */
+    color: #5F7179; /* Default color */
+}
+
+.arrowContainer {
+    position: absolute;
+    bottom: 16px;
+    right: 16px;
+}
+
 .cardIcon {
     width: 48px;
     height: 48px;
     position: absolute;
     top: 16px;
     right: 16px;
-  }
-  
+}
+
 /* Specific styling for the first card to span two rows */
 .card:first-child {
     grid-row: span 2; /* Span two rows */
-  }
-  
+}
+
 .card:first-child .cardDescription {
     flex-grow: 1; /* Ensure it takes up available space */
-  }
-  
+}
+
 @media (max-width: 768px) { /* Adjust the media query breakpoint as needed */
     .cardsContainer {
-      grid-template-columns: 1fr; /* Single column on smaller screens */
+        grid-template-columns: 1fr; /* Single column on smaller screens */
     }
-  
-.card:first-child {
-      grid-row: span 1; /* Span only one row on smaller screens */
+
+    .card:first-child {
+        grid-row: span 1; /* Span only one row on smaller screens */
     }
-  }
+}
